feat: 2c67c5cb0b2646b09ad08a604b299b27

--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -129,6 +129,32 @@
                                 </div>
                             </div>
                             <div class="form-row">
+                                <div class="col-md-6" style="display:none">
+                                    <div class="position-relative form-group">
+                                        <label for="expenses_remittance" class="">REMITTANCE</label>
+                                        <select name="expenses_remittance" id="expenses_remittance" class="form-control">
+                                            <option value="">Choose...</option>
+                                            <option value="PALAWAN PAWNSHOP">PALAWAN PAWNSHOP</option>
+                                            <option value="CEBUANA LHUILLIER">CEBUANA LHUILLIER</option>
+                                            <option value="M LHUILLIER">M LHUILLIER</option>
+                                            <option value="GCASH">GCASH</option>
+                                            <option value="OVER THE COUNTER">OVER THE COUNTER</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-md-6" style="display:none">
+                                    <div class="position-relative form-group"><label for="expenses_sender" class="">Sender</label>
+                                        <input name="expenses_sender" id="expenses_sender" type="text" class="form-control" required>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="form-row">
+                                <div class="col-md-6">
+                                    <div class="position-relative form-group"><label for="expenses_address" class="">Address</label>
+                                        <input name="expenses_address" id="expenses_address" type="text"
+                                            class="form-control" required>
+                                    </div>
+                                </div>
                                 <div class="col-md-6">
                                     <div class="position-relative form-group"><label for="settled_by" class="">Settled
                                             By</label><input name="settled_by" id="settled_by" type="text"
