--- a/prime_admin/templates/lms/earnings/admin.html
+++ b/prime_admin/templates/lms/earnings/admin.html
@@ -183,9 +183,9 @@
                         <tr>
                             <th class="text-center">ID</th>
                             <th class="text-center">DATE</th>
-                            <th class="text-center">ACCOUNT NO. / PARTICULAR</th>
+                            <th class="text-center">REMITTANCE</th>
                             <th class="text-center">REFERENCE NO.</th>
-                            <th class="text-center">OTC</th>
+                            <th class="text-center">SENDER</th>
                             <th class="text-center">AMOUNT</th>
                             <th class="text-center">STATUS</th>
                             <th class="text-center">ACTIONS</th>
