--- a/prime_admin/templates/lms/transactions/transactions_page.html
+++ b/prime_admin/templates/lms/transactions/transactions_page.html
@@ -23,7 +23,7 @@
             "columnDefs": [
                 {visible: false, targets:[0]},
                 {
-                    "targets": 8,
+                    "targets": 9,
                     "className": "text-center",
                     "render": function(data, type, row){
                         if (data == "PROCESSED") {
@@ -74,6 +74,7 @@
                             <th class="text-center">REMITTANCE</th>
                             <th class="text-center">REFERENCE NO.</th>
                             <th class="text-center">SENDER</th>
+                            <th class="text-center">CONTACT NO.</th>
                             <th class="text-center">ADDRESS</th>
                             <th class="text-center">AMOUNT</th>
                             <th class="text-center">STATUS</th>
