--- a/prime_admin/templates/lms/add_expenses_modal.html
+++ b/prime_admin/templates/lms/add_expenses_modal.html
@@ -129,7 +129,7 @@
                                 </div>
                             </div>
                             <div class="form-row">
-                                <div class="col-md-6" style="display:none">
+                                <div class="col-md-4" style="display:none">
                                     <div class="position-relative form-group">
                                         <label for="expenses_remittance" class="">REMITTANCE</label>
                                         <select name="expenses_remittance" id="expenses_remittance" class="form-control">
@@ -142,9 +142,14 @@
                                         </select>
                                     </div>
                                 </div>
-                                <div class="col-md-6" style="display:none">
+                                <div class="col-md-4" style="display:none">
                                     <div class="position-relative form-group"><label for="expenses_sender" class="">Sender</label>
                                         <input name="expenses_sender" id="expenses_sender" type="text" class="form-control" required>
+                                    </div>
+                                </div>
+                                <div class="col-md-4" style="display:none">
+                                    <div class="position-relative form-group"><label for="expenses_contact_no" class="">Contact No.</label>
+                                        <input name="expenses_contact_no" id="expenses_contact_no" type="text" class="form-control" required>
                                     </div>
                                 </div>
                             </div>
