--- a/prime_admin/templates/lms/fund_wallet/fund_wallet.html
+++ b/prime_admin/templates/lms/fund_wallet/fund_wallet.html
@@ -390,8 +390,9 @@
             $("#expenses_bank").closest('.col-md-6').hide();
             $("#expenses_account_name").closest('.col-md-6').hide();
             $("#btn_show_earnings").closest('.col-md-3').hide();
-            $("#expenses_remittance").closest('.col-md-6').hide();
-            $("#expenses_sender").closest('.col-md-6').hide();
+            $("#expenses_remittance").closest('.col-md-4').hide();
+            $("#expenses_sender").closest('.col-md-4').hide();
+            $("#expenses_contact_no").closest('.col-md-4').hide();
             $("#expenses_address").closest('.col-md-6').hide();
 
             if (selectedCategory == "utilities") {
@@ -457,8 +458,9 @@
                 }
                 getContactPersons($("#branch_expenses").val(), "add_expenses");
                 $("#btn_show_earnings").closest('.col-md-3').show();
-                $("#expenses_remittance").closest('.col-md-6').show();
-                $("#expenses_sender").closest('.col-md-6').show();
+                $("#expenses_remittance").closest('.col-md-4').show();
+                $("#expenses_sender").closest('.col-md-4').show();
+                $("#expenses_contact_no").closest('.col-md-4').show();
                 $("#expenses_address").closest('.col-md-6').show();
     
                 $("#label_description").html('Contact Person');
