fix: a596182cf78941c59eb9151fb6465a1d

--- a/prime_admin/templates/lms/transactions/transactions_page.html
+++ b/prime_admin/templates/lms/transactions/transactions_page.html
@@ -23,7 +23,7 @@
             "columnDefs": [
                 {visible: false, targets:[0]},
                 {
-                    "targets": 9,
+                    "targets": [9],
                     "className": "text-center",
                     "render": function(data, type, row){
                         if (data == "PROCESSED") {
@@ -31,6 +31,7 @@
                         } else if(data == "PROCESSING") {
                             return `<div class="badge badge-warning">PROCESSING</div>`
                         }
+                        return '';
                     }
                 },
             ],
