--- a/prime_admin/templates/lms/dashboard.html
+++ b/prime_admin/templates/lms/dashboard.html
@@ -127,7 +127,7 @@
                     $("#span_sales_today").html(response.sales_today);
                     updateData(chart_sales_today, response.data.labels, response.data.datasets);
                 }).fail(function () {
-                    Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
+                    swal("Error Occured!", "Please refresh the page then try again!", "error");
                 });
         }
 
@@ -141,7 +141,7 @@
                     $("#total_premium_payment").html(response.data.total_premium_payment);
                     $("#total").html(response.data.total);
                 }).fail(function () {
-                    Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
+                    swal("Error Occured!", "Please refresh the page then try again!", "error");
                 });
         }
 
@@ -158,7 +158,7 @@
                     }]);
                     $("#span_gross_sales_breakdown_total").html(response.total);
                 }).fail(function () {
-                    Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
+                    swal("Error Occured!", "Please refresh the page then try again!", "error");
                 });
         }
 
@@ -176,7 +176,7 @@
                     }]);
                     $("#span_expenses_breakdown_total").html(response.total);
                 }).fail(function () {
-                    Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
+                    swal("Error Occured!", "Please refresh the page then try again!", "error");
                 });
         }
 
@@ -193,7 +193,7 @@
                         fill: false,
                     }]);
                 }).fail(function () {
-                    Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
+                    swal("Error Occured!", "Please refresh the page then try again!", "error");
                 });
         }
 
@@ -210,7 +210,7 @@
                         fill: false,
                     }]);
                 }).fail(function () {
-                    Swal.fire({ title: "Error Occured!", text: "Please refresh the page then try again!", icon: "error" });
+                    swal("Error Occured!", "Please refresh the page then try again!", "error");
                 });
         }
 
@@ -320,7 +320,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="position-relative form-group">
                         <label for="filter_branch" class="">Branch</label>
                         <select name="filter_branch" id="filter_branch" class="form-control" required>
