--- a/app/admin/templates/admin/notifications/under_construction.html
+++ b/app/admin/templates/admin/notifications/under_construction.html
@@ -16,32 +16,11 @@
 <div class="wrapper">
 	<div class="left-section"><img src="{{ url_for('bp_admin.static', filename='img/watch.png') }}" /></div>
 	<div class="right-section">
-		<h1 id="logo">Prime School</h1>
+		<h1 id="logo">{{message}}</h1>
 		<div class="seprator"></div>
 		<div class="main-content">
-			<h2>Our Website is coming soon</h2>
-			<p>In the mean time connect with us with the information provided</p>
+			<h2>This feature is coming soon</h2>
 		</div>
-		<ul class="social">
-			<li id="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-			<li id="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li id="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-		</ul>
-		<ul class="info">
-			<li><i class="fa fa-phone-square"></i>Your contact number</li>
-			<li><i class="fa fa-map-marker"></i>Your address</li>
-			<li><i class="fa fa-envelope"></i><a href="#">Your email address</a></li>
-		</ul>
-
-		<div class="social-links">
-			<ul class="social2">
-				<li id="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-				<li id="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-				<li id="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-			</ul>
-		</div>
-		
-		
 	</div>
 	<div class="watch-section"><img src="images/watch.png" /></div>
 </div>
