--- a/prime_home/templates/prime_home/about_page.html
+++ b/prime_home/templates/prime_home/about_page.html
@@ -9,8 +9,11 @@
     <div class="container mb-4 py-5">
         <h1 class="display-5 fw-bold">About Us</h1>
         <p class="fs-3 mb-0">
-            Korean language is challenging institutional services for Jonwel Suprecencia, as an EPS worker in South Korea During his early endeavors , he has foreseen the need of Filipino for working abroad to know the basic language of Korean as part of their requirements for employment in Korea. He has learn the difference of Filipino and korean culture and understand a lot more about Korean Labor and Immigration Laws.
-        </p>
+         The Prime Korean Language and Review Center Incorporated is the result of Jonwel Suprecencia's firsthand experience as an EPS worker in South Korea. Through his early endeavors, Jonwel recognized the crucial need for Filipinos working abroad to acquire a strong foundation in the Korean language as part of their employment requirements. He gained a deep understanding of the disparities between Filipino and Korean cultures and developed a comprehensive knowledge of Korean Labor and Immigration Laws. <br>
+Originally known as CHOGI LANGUAGE AND TECHNOLOGY CENTER INC., our corporation now operates under the name Prime Korean Language and Review Center and Asian Korean Language andReview Center (formerly: Chogi Language and Technology Center Inc.) as amended on January 09, 2021.<br>
+Prime Korean Language and Review Center is a language training center dedicated to providing intensive Korean language training to help individuals pass the Korean language test mandated by HRDKOREA (Human Resources Development of Korea) in coordination with POEA (Philippine Overseas Employment Administration). Since our establishment in 2018, we have been registered with the Securities and Exchange Commission under registration no. CS201817522.<br>
+We are committed to assisting Filipinos in passing the Korean language proficiency test by providing support. Our comprehensive guidance helps students/applicants fulfill the step-by-step requirements necessary to qualify as factory workers in South Korea. With our excellent Korean language training services, we empower Filipino workers to excel in the EPS-TOPIK exam administered by POEA.<br>
+      </p>
     </div>
     <svg viewBox="0 0 1440 185" preserveAspectRatio="none" fill="rgb(0, 97, 168)" version="1.1" xmlns="http://www.w3.org/2000/svg" class="bg-white d-block text-primary" width="100%" height="160">
         <path d="M 0 0 H 1440 V 60 C 1114 355 700 35 516 35 C 333 35 246 199 0 60 V 0 Z"/>
@@ -29,20 +32,18 @@
         <h2 class="h5 text-primary">Who We Are</h2>
         <h3 class="h1 mb-4 text-dark">CHOGI LANGUAGE AND TECHNOLOGY CENTER INC.</h3>
         <p class="lead mb-5">
-            Chogi language and technology center inc. Is a language training center that provides intensive korean language training to pass the korean language test prescribed by the HRDKOREA (Human Resources Development of Korea) in coordination with POEA (Philippine Overseas Employment Administration). The company has been registered since 2018 under security and exchange commission with registration no. Cs201817522.
-        </p>
-        <p class="lead mb-5">
-            We are helping filipinos to pass the korean language proficiency test with assistance for e registration under poea and eps registration, we assist the students/applicants to pass the step by step requirements to be qualified as a factory worker in south korea. Chogi language and technology center inc. Provides excellent korean language training services to help filipino workers pass the eps-topik exam of poea.</p>
-
+            At the Prime Korean Language and Review Center, we take immense pride in being recognized as one of the best Korean language learning centers in the Philippines. Our primary objective is to help individuals achieve a progressive future by mastering the Korean language. Through our comprehensive programs, students can become fluent speakers, improve their listening skills, and enhance their writing and reading abilities. Additionally, we provide dedicated assistance to Filipinosaiming to pass the EPS-TOPIK exam, opening doors for employment as factory workers in South Korea. We are passionate about empowering Filipinos to fulfill their dreams and uplift their living standards.
+        </p>       
             <h3 class="h1 mb-4 text-dark">What is eps-topik?
             </h3>
             <p class="lead mb-5">
-                Eps-topik stands for employment permit system-test of proficiency in korean - simply means pure korean language test. It was implemented by hrd korea & poea to reduce the number of TNT working in south korea.        </p>
+                EPS-TOPIK stands for Employment Permit System-Test of Proficiency in Korean. It is a pure Korean language test implemented by HRD Korea and POEA to mitigate the presence of irregular workers in South Korea.
+	    </p>
             <p class="lead mb-5">
-                For common reference, please be aware that there is no more agency if you want to work in south korea. Only poea can give you the employer if you passed their eps-topik. Chogi korean language center services is not agency, we are a korean language training center.
+                It is important to note that there are no longer any agencies involved in the process of working in South Korea. Only POEA can provide you with an employer if you successfully pass their EPS-TOPIK examination. Prime Korean Language and Review Center is not an agency but a dedicated Korean language training center.
             </p>
             <p class="lead mb-5">
-                The company is a corporation duly organized and existing by virtue of philippine laws. It is one of the many service provider language company operating in luzon, bisayas, mindanao and presently has around 7 branches actively serving its enrollees at Cebu City, Mandaue City, Tagbilaran City, Bohol, Tacloban City, Calbayog City, Puerto Princesa City, Palawan and Butuan City.       
+                Our corporation operates in compliance with Philippine laws and regulations and is one of the leading language service providers operating in Luzon, Visayas, and Mindanao. Presently, we have seven branches actively serving enrollees in Cebu City, Mandaue City, Tagbilaran City, Bohol, Tacloban City, Calbayog City, Puerto Princesa City, Palawan, and Butuan City.  
              </p>
     </div>                 
 </section>
@@ -60,13 +61,15 @@
                 <div class="row">
                     <div class="col-md-5">
                         <h4 class="mb-3 text-dark">Vision</h4> 
-                        <p>Our vision is to continue our successful mentorship and providing support and assistance to those Filipino students to change their life and bringing out a good and brighter future for them and they may live harmoniously and financially secured while and after working abroad
+                        <p>
+				Our vision is rooted in continued mentorship, support, and assistance to Filipino students, enabling transformative life changes and creating a brighter future for each individual. We strive to facilitate harmonious and financially secure lives for our students while and after they work abroad.
                         </p> 
                     </div>
                     <div class="col-md-5 offset-md-1">
                         <h4 class="mb-3 text-dark">Mission</h4> 
-                        <p>Provide intensive Korean language training to pass the Korean language proficiency test prescribed by the HRD KOREA in coordination with POEA as the main requirements. Assist the students to reach out their goal, to ensure that each student can learn the four basic skills in learning Korean</p> 
-                        <p>Language such as Listening, Speaking , Reading and Writing , dedication that together we put our efforts to enable our students fulfil their dreams to work in South Korea.</p> 
+                        <p>
+				Our mission is to deliver intensive Korean language training that equips our students with the proficiency required to pass the Korean language proficiency test prescribed by HRD KOREA incoordination with POEA. We are dedicated to assisting our students in reaching their goals and ensuring that they acquire the essential skills in listening, speaking, reading, and writing in the Korean Language. Through our unwavering dedication, we combine efforts to enable our students to fulfill their dreams of working in South Korea.
+			</p> 
                     </div>
                 </div>                 
             </div>             
