fix: 05aac5002a3d48d3accadc741e953550

--- a/app/admin/templates/admin/admin_header.html
+++ b/app/admin/templates/admin/admin_header.html
@@ -82,10 +82,10 @@
                         </div>
                         <div class="widget-content-left  ml-3 header-user-info">
                             <div class="widget-heading">
-                                {{ current_user.fname}}
+                                {{ current_user.username}}
                             </div>
                             <div class="widget-subheading">
-                                {{ current_user.lname }}
+                                {{ current_user.role.name }}
                             </div>
                         </div>
                     </div>
