fix: cac92902509c4536acdf0e785745f39e

--- a/app/admin/templates/admin/admin_dashboard.html
+++ b/app/admin/templates/admin/admin_dashboard.html
@@ -145,7 +145,7 @@
                             console.log(data[0]);
     
                             $.ajax({
-                                url: "/admin/dashboard/approve-user",
+                                url: "/auth/users/approve",
                                 type: "POST",
                                 dataType: "json",
                                 data: JSON.stringify({
