feat: 42f60438a03e4381bcf336ab798985ed

--- a/app/admin/templates/admin/admin_sidebar.html
+++ b/app/admin/templates/admin/admin_sidebar.html
@@ -91,7 +91,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{{url_for('bp_admin.under_construction')}}?message=Student Records > Passers">
+                            <a id="li_passers" href="{{url_for('lms.passers')}}">
                                 <i class="metismenu-icon"></i>
                                 Passers
                             </a>
