--- a/prime_admin/templates/lms/settings_sidebar.html
+++ b/prime_admin/templates/lms/settings_sidebar.html
@@ -81,7 +81,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="{{url_for('bp_admin.under_construction')}}?message=Industries">
+                            <a id="li_industries" href="{{url_for('lms.industries_settings')}}">
                                 <i class="metismenu-icon"></i>
                                 Industries
                             </a>
