fix: undo action column

--- a/prime_admin/templates/lms/student_records/examiners/examiners_page.html
+++ b/prime_admin/templates/lms/student_records/examiners/examiners_page.html
@@ -324,6 +324,7 @@
                                 <th class="text-center">ROOM</th>
                                 <th class="text-center">TEST DATE</th>
                                 <th class="text-center">SESSION</th>
+                                <th class="text-center">ACTION</th>
                             </tr>
                         </thead>
                         <tbody>
